--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
     <div class="nitesh">
       <div class="left">
         <h5>LAZAREV. - Product Design Agency</h5>
-        <h2>Made By ❤️ Nitesh</h2>
+        <h2>Made By ❤️ Krish</h2>
       </div>
       <div class="right">
         <h5>All Rights Reserved</h5>
